fix #1119 - Pricing Table on Dark Mode doesn't change separator text

--- a/src/scss/layout/_dark.scss
+++ b/src/scss/layout/_dark.scss
@@ -56,6 +56,10 @@ body:not(.theme-dark) .hide-theme-light {
     color: inherit;
   }
 
+  .bg-light {
+    background-color: $dark-mode-darken !important;
+  }
+
   .card {
     border-color: transparent;
   }
